Infrastructure/terraform/modules/shipreq-env/service-ops-prometheus-tech.tf
locals {
  prometheus_tech_tags = merge(local.default_tags, { Name = "${var.env}-prometheus-tech" })

  prometheus_tech_config_yml = templatefile("${path.module}/service-ops-prometheus-tech.yml", {
    APP_CADVISOR_PORT               = local.app_cluster_ports.cadvisor
    APP_HOST                        = local.app_host
    APP_NODE_EXPORTER_PORT          = local.app_cluster_ports.node_exporter
    CADVISOR_PATH                   = local.cadvisor_path
    CADVISOR_RELABEL                = chomp(replace(local.prometheus_tech_config_yml_cadvisor_relabel, "/\n+/", "\n"))
    ECS_EXPORTER_PORT               = local.ops_cluster_ports.ecs_exporter
    ECS_EXPORTER_SCRAPE_INTERVAL    = "${max(60, var.prometheus_tech_scrape_interval_sec)}s"
    NODE_EXPORTER_RELABEL           = chomp(replace(local.prometheus_tech_config_yml_node_exporter_relabel, "/\n+/", "\n"))
    OPS_CADVISOR_PORT               = local.ops_cluster_ports.cadvisor
    OPS_HOST                        = local.ops_host
    OPS_NODE_EXPORTER_PORT          = local.ops_cluster_ports.node_exporter
    PROMETHEUS_BIZ_HOST             = local.prometheus_biz_host
    PROMETHEUS_BIZ_PATH             = local.prometheus_biz_path
    PROMETHEUS_BIZ_PORT             = local.ops_cluster_ports.prometheus_biz
    PROMETHEUS_TECH_HOST            = local.prometheus_tech_host
    PROMETHEUS_TECH_PATH            = local.prometheus_tech_path
    PROMETHEUS_TECH_PORT            = local.ops_cluster_ports.prometheus_tech
    PROMETHEUS_TECH_SCRAPE_INTERVAL = "${var.prometheus_tech_scrape_interval_sec}s"
    SHIPREQ_TASKMAN_PORT            = local.app_cluster_ports.shipreq_taskman
    SHIPREQ_WEBAPP_SD_DOMAIN        = local.shipreq_webapp_sd_domain
  })

  prometheus_tech_config_yml_node_exporter_relabel = <<EOB
    relabel_configs:

      # Remove port from instance
      - source_labels: [__address__]
        regex: "([^:]+):\\d+"
        target_label: instance
EOB

  prometheus_tech_config_yml_cadvisor_relabel = <<EOB
    relabel_configs:

      # Remove port from instance
      - source_labels: [__address__]
        regex: "([^:]+):\\d+"
        target_label: instance

    metric_relabel_configs:

    # Drop metrics
    - source_labels: [__name__]
      regex: 'container_tasks_state'
      action: drop

    # Rename ECS attributes
    - source_labels: ['container_label_com_amazonaws_ecs_cluster']
      target_label: ecs_cluster
    - source_labels: ['container_label_com_amazonaws_ecs_container_name']
      target_label: ecs_name
    - source_labels: ['container_label_com_amazonaws_ecs_task_definition_family']
      target_label: ecs_taskdef_name
    - source_labels: ['container_label_com_amazonaws_ecs_task_definition_version']
      target_label: ecs_taskdef_ver

    # Drop labels
    - regex: 'container_label_.*'
      action: labeldrop
EOB
}

resource "aws_ecs_service" "prometheus_tech" {
  name            = "${var.env}-ops-prometheus-tech"
  cluster         = aws_ecs_cluster.ops.id
  task_definition = aws_ecs_task_definition.prometheus_tech.arn
  desired_count   = 1
  propagate_tags  = "SERVICE"
  tags            = local.prometheus_tech_tags
}

resource "aws_ecs_task_definition" "prometheus_tech" {
  family = "${var.env}-ops-prometheus-tech"
  tags   = local.prometheus_tech_tags

  volume {
    name      = "data"
    host_path = module.ecs_ebs_prometheus_tech.mount_dir
  }

  container_definitions = <<EOB
[
  {
    "name": "${var.env}-ops-prometheus-tech",
    "image": "${data.aws_ecr_repository.prometheus-tech.repository_url}:${var.ops_images_tag}",
    "logConfiguration": {
      "logDriver": "json-file"
    },
    "environment": [
      {
        "name": "CONFIG",
        "value": ${jsonencode(local.prometheus_tech_config_yml)}
      }
    ],
    "command": [
      "--storage.tsdb.retention.${var.prometheus_tech_retention}"
    ],
    "mountPoints": [
      {
        "sourceVolume": "data",
        "containerPath": "/data",
        "readOnly": false
      }
    ],
    "portMappings": [
      {
        "protocol": "tcp",
        "hostPort": ${local.ops_cluster_ports.prometheus_tech},
        "containerPort": 9090
      }
    ],
    "cpu": ${local.ops_cluster_cpu.prometheus_tech},
    "memoryReservation": ${local.ops_cluster_mem_res.prometheus_tech},
    "healthCheck": {
      "command": [
        "CMD-SHELL",
        "wget -qO - localhost:9090${local.prometheus_tech_path}/-/healthy || exit 1"
      ],
      "startPeriod": ${local.ops_healthcheck.startPeriod},
      "interval": ${local.ops_healthcheck.interval},
      "timeout": ${local.ops_healthcheck.timeout},
      "retries": ${local.ops_healthcheck.retries}
    }
  }
]
EOB
}

module "ecs_ebs_prometheus_tech" {
  source      = "../ecs-ebs"
  name        = "${var.env}-ops-prometheus-tech"
  size        = var.prometheus_tech_ebs_size
  ec2_role    = aws_iam_role.ops-ecs
  device_path = local.ops_device.prometheus_tech
  tags        = local.prometheus_tech_tags

  manifest = [
    {
      availability_zone = var.availability_zone
      count             = 1
    }
  ]
}
